# BigSim

./: .gitignore  Cargo.toml  build.rs  tauri.conf.json
icons/: icon.xcf
src/: main.rs
src/www/: index.html
