[package]
name = "BigSim"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.tauri]
version = "1.5"
# default-features = false
features = ["api-all" ]


[build-dependencies]
tauri-build = "1"


[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true

